# aula18_bootcamp

./: exemplo_00.py  exemplo_01.py  pyproject.toml
src/: db.py  pokemon.db
