[project]
name = "aula18-bootcamp"
version = "0.1.0"
description = ""
authors = [
    {name = "Jennifer Maia",email = "jen_maia@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "pydentic (>=0.0.1.dev3,<0.0.2)",
    "pydantic (>=2.11.7,<3.0.0)",
    "sqlalchemy (>=2.0.42,<3.0.0)",
    "db (>=0.1.1,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
